@@ -30,6 +30,7 @@ General:
   A systems administrator can always add.
   A systems administrator can always view.
   A systems administrator can always edit.
+  A systems administrator can always trash.
   A systems administrator can always manage security.
   A systems administrator can always use the developer tools.
 
@@ -39,4 +40,5 @@ Status Active:
   A workspace guest can view.
   A workspace member can add.
   A workspace member can edit.
+  A workspace member can trash.
   A workspace admin can manage security.
